unpackaged/main/default/objects/Quote__c/fields/OB_Residential_Pickup__c.field-meta.xml
<CustomField>
    <fullName>OB_Residential_Pickup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Residential Pickup</label>
    <type>Checkbox</type>
</CustomField>