unpackaged/main/default/objects/Quote__c/fields/OB_Residential_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>OB_Residential_Surcharge__c</fullName>
    <description>Outbound Shipping Residential Surcharge</description>
    <label>OB Residential Fee</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>