unpackaged/main/default/objects/Quote__c/fields/OB_Selection__c.field-meta.xml
<CustomField>
    <fullName>OB_Selection__c</fullName>
    <label>Selection</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Name Your Price</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>