unpackaged/main/default/objects/Quote__c/fields/OB_Service_Type__c.field-meta.xml
<CustomField>
    <fullName>OB_Service_Type__c</fullName>
    <label>OB Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FTL</fullName>
            </value>
            <value>
                <fullName>LTL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>