unpackaged/main/default/objects/Quote__c/fields/OB_Sub_Total__c.field-meta.xml
<CustomField>
    <fullName>OB_Sub_Total__c</fullName>
    <description>Outbound Shipping Sub Total amount.</description>
    <label>OB Sub Total</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>