unpackaged/main/default/objects/Quote__c/fields/OB_Total__c.field-meta.xml
<CustomField>
    <fullName>OB_Total__c</fullName>
    <description>Outbound Shipping Total amount.</description>
    <label>OB Total</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>