unpackaged/main/default/objects/Quote__c/fields/OB_Weekend_Fee__c.field-meta.xml
<CustomField>
    <fullName>OB_Weekend_Fee__c</fullName>
    <description>Min $125 / occurrence</description>
    <label>OB Weekend Fee</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>