unpackaged/main/default/objects/Quote__c/fields/OB_Weekend_Pickup__c.field-meta.xml
<CustomField>
    <fullName>OB_Weekend_Pickup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Weekend Pickup (Non GES)</label>
    <type>Checkbox</type>
</CustomField>