unpackaged/main/default/objects/Quote__c/fields/Oracle_AR_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Oracle_AR_Customer_ID__c</fullName>
    <label>Merged Oracle AR Customer ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>