unpackaged/main/default/objects/Quote__c/fields/Oracle_Booth_Id__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Booth_Id__c</fullName>
    <formula>Booth__r.BOOTH_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Oracle Booth Id</label>
    <type>Text</type>
</CustomField>