unpackaged/main/default/objects/Quote__c/fields/Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Order Date</label>
    <type>Date</type>
</CustomField>