unpackaged/main/default/objects/Quote__c/fields/Origination_Street__c.field-meta.xml
<CustomField>
    <fullName>Origination_Street__c</fullName>
    <label>Origination Street</label>
    <type>TextArea</type>
</CustomField>