unpackaged/main/default/objects/Quote__c/fields/Outbound_Owner__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Owner__c</fullName>
    <label>Outbound Owner</label>
    <length>120</length>
    <type>Text</type>
</CustomField>