unpackaged/main/default/objects/Quote__c/fields/Outbound_Stage__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Stage__c</fullName>
    <label>Outbound Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Booked</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
            <value>
                <fullName>Pending Carrier Quote</fullName>
            </value>
            <value>
                <fullName>Pending Exhibitor Information</fullName>
            </value>
            <value>
                <fullName>Pending Traffic Quote</fullName>
            </value>
            <value>
                <fullName>Qualification</fullName>
            </value>
            <value>
                <fullName>Quote Approved</fullName>
            </value>
            <value>
                <fullName>Quote Submitted</fullName>
            </value>
            <value>
                <fullName>Re-Book</fullName>
            </value>
            <value>
                <fullName>Traffic / Carrier Quote Returned</fullName>
            </value>
            <value>
                <fullName>Sent Traffic Quote</fullName>
            </value>
            <value>
                <fullName>AIT PERISHABLE LEAD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>