unpackaged/main/default/objects/Quote__c/fields/Palletization__c.field-meta.xml
<CustomField>
    <fullName>Palletization__c</fullName>
    <defaultValue>false</defaultValue>
    <description>$50 / pallet</description>
    <label>Palletization</label>
    <type>Checkbox</type>
</CustomField>