unpackaged/main/default/objects/Quote__c/fields/Parent_Quote__c.field-meta.xml
<CustomField>
    <fullName>Parent_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If Quote requires more than 2 legs/segments, use this field to reference to Quote that has the Inbound/Outbound Quote</description>
    <label>Parent Quote</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipLabel>Child Quotes</relationshipLabel>
    <relationshipName>Child_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>