unpackaged/main/default/objects/Quote__c/fields/Pickup_Booth_No__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Booth_No__c</fullName>
    <description>Booth # for Inbound Pickup. If item is being picked up from another Show (GES or otherwise) the Show Name and Booth # must be captured.

The default behavior is the Show selected on the Quote will be defaulted in this field.</description>
    <label>Pickup Booth #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>