unpackaged/main/default/objects/Quote__c/fields/Pickup_Contact_Fax__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Contact_Fax__c</fullName>
    <description>Inbound Shipment Pickup Contact Fax</description>
    <label>Pickup Contact Fax</label>
    <type>Phone</type>
</CustomField>