unpackaged/main/default/objects/Quote__c/fields/Pickup_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Contact_Name__c</fullName>
    <description>Inbound Shipment Pickup Contact Name</description>
    <label>Pickup Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>