unpackaged/main/default/objects/Quote__c/fields/Pickup_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Contact_Phone__c</fullName>
    <description>Inbound Shipment Pickup Contact Phone</description>
    <label>Pickup Contact Phone</label>
    <type>Phone</type>
</CustomField>