unpackaged/main/default/objects/Quote__c/fields/Pickup_Show_Name__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Show_Name__c</fullName>
    <description>Show Name for Inbound Pickup. If item is being picked up from another Show (GES or otherwise) the Show Name and Booth # must be captured.

The default behavior is the Show selected on the Quote will be defaulted in this field.</description>
    <label>Pickup Show Name/Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>