unpackaged/main/default/objects/Quote__c/fields/Project_Number__c.field-meta.xml
<CustomField>
    <fullName>Project_Number__c</fullName>
    <formula>Show_Occurrence__r.Job_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project #</label>
    <type>Text</type>
</CustomField>