unpackaged/main/default/objects/Quote__c/fields/Quote_Inside_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Quote_Inside_Surcharge__c</fullName>
    <label>Quote Inside Surcharge</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>