unpackaged/main/default/objects/Quote__c/fields/Quote_Subject__c.field-meta.xml
<CustomField>
    <fullName>Quote_Subject__c</fullName>
    <description>Quote Subject or Description</description>
    <label>Quote Subject</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Inbound Canadian</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
            <value>
                <fullName>Outbound Canadian</fullName>
            </value>
            <value>
                <fullName>Roundtrip</fullName>
                <default>true</default>
                <label>Roundtrip</label>
            </value>
            <value>
                <fullName>Roundtrip Canadian</fullName>
            </value>
            <value>
                <fullName>Truckload</fullName>
            </value>
            <value>
                <fullName>Truckload Canadian</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>