unpackaged/main/default/objects/Quote__c/fields/Quoted_Fuel_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Quoted_Fuel_Surcharge__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Quoted Fuel Surcharge</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>