unpackaged/main/default/objects/Quote__c/fields/Residential_Pickup__c.field-meta.xml
<CustomField>
    <fullName>Residential_Pickup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Residential Pickup</label>
    <type>Checkbox</type>
</CustomField>