unpackaged/main/default/objects/Quote__c/fields/Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Sales Rep responsible for the Quote</description>
    <label>Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes_del</relationshipName>
    <type>Lookup</type>
</CustomField>