unpackaged/main/default/objects/Quote__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <description>Full Truck Load or Less Than Truck Load</description>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FTL</fullName>
            </value>
            <value>
                <fullName>LTL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>