unpackaged/main/default/objects/Quote__c/fields/Ship_To_Location__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Location__c</fullName>
    <label>Ship To</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Showsite</fullName>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>