unpackaged/main/default/objects/Quote__c/fields/Shipment_Type__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Type__c</fullName>
    <label>Shipment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Air Transportation</fullName>
            </value>
            <value>
                <fullName>Ground Transportation</fullName>
            </value>
            <value>
                <fullName>Local Shipments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>