unpackaged/main/default/objects/Quote__c/fields/Show__c.field-meta.xml
<CustomField>
    <fullName>Show__c</fullName>
    <formula>Show_Occurrence__r.Show_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show</label>
    <type>Text</type>
</CustomField>