unpackaged/main/default/objects/Quote__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Quote Source</description>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chat - Logistics Link</fullName>
            </value>
            <value>
                <fullName>City Lead</fullName>
            </value>
            <value>
                <fullName>E-Commerce Site</fullName>
            </value>
            <value>
                <fullName>Exhibitor List - Canadian</fullName>
            </value>
            <value>
                <fullName>Exhibitor List - Domestic</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>Inbound Call Center - Chat</fullName>
            </value>
            <value>
                <fullName>Inbound Call Center - Phone</fullName>
            </value>
            <value>
                <fullName>Incoming Call</fullName>
            </value>
            <value>
                <fullName>International Agent</fullName>
            </value>
            <value>
                <fullName>Lead Generation</fullName>
            </value>
            <value>
                <fullName>Quote Engine - Accepted</fullName>
            </value>
            <value>
                <fullName>Quote Engine - Declined</fullName>
            </value>
            <value>
                <fullName>Volume Quote</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>