unpackaged/main/default/objects/Quote__c/fields/Special_Discount_Program__c.field-meta.xml
<CustomField>
    <fullName>Special_Discount_Program__c</fullName>
    <description>Used to track Marketing programs within logistics</description>
    <label>Special Discount Program</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Caravan</fullName>
            </value>
            <value>
                <fullName>Early Bird</fullName>
            </value>
            <value>
                <fullName>Pool</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>