unpackaged/main/default/objects/Quote__c/fields/TMS_Inbound_Shipping_Order__c.field-meta.xml
<CustomField>
    <fullName>TMS_Inbound_Shipping_Order__c</fullName>
    <description>Inbound Shipping Order Number from TMS</description>
    <label>TMS Inbound Shipping Order #</label>
    <length>18</length>
    <type>Text</type>
</CustomField>