unpackaged/main/default/objects/Quote__c/fields/TMS_Outbound_Shipping_Order__c.field-meta.xml
<CustomField>
    <fullName>TMS_Outbound_Shipping_Order__c</fullName>
    <description>Outbound Shipping Order Number from TMS</description>
    <label>TMS Outbound Shipping Order #</label>
    <length>18</length>
    <type>Text</type>
</CustomField>