unpackaged/main/default/objects/Quote__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Quote Type</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Custom Booth</fullName>
            </value>
            <value>
                <fullName>Custom Graphics</fullName>
            </value>
            <value>
                <fullName>Exhibit Select</fullName>
            </value>
            <value>
                <fullName>Logistics Canadian</fullName>
            </value>
            <value>
                <fullName>Logistics Canadian - Inbound</fullName>
            </value>
            <value>
                <fullName>Logistics Canadian - Outbound</fullName>
            </value>
            <value>
                <fullName>Logistics Domestic</fullName>
            </value>
            <value>
                <fullName>Logistics Domestic - Inbound</fullName>
                <default>true</default>
                <label>Logistics Domestic - Inbound</label>
            </value>
            <value>
                <fullName>Logistics Domestic - Outbound</fullName>
            </value>
            <value>
                <fullName>Logistics Intl</fullName>
            </value>
            <value>
                <fullName>Logistics Intl - Inbound</fullName>
            </value>
            <value>
                <fullName>Logistics Intl - Outbound</fullName>
            </value>
            <value>
                <fullName>Pool Program</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>