unpackaged/main/default/objects/Quote__c/fields/Wait_Time__c.field-meta.xml
<CustomField>
    <fullName>Wait_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <description>$80 / hour</description>
    <label>Wait Time (Non GES)</label>
    <type>Checkbox</type>
</CustomField>