unpackaged/main/default/objects/Quote__c/fields/Weekend_Fee__c.field-meta.xml
<CustomField>
    <fullName>Weekend_Fee__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Min $125 / pickup</description>
    <label>IN Weekend Fee</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>