unpackaged/main/default/objects/Quote__c/fields/Weight_Override__c.field-meta.xml
<CustomField>
    <fullName>Weight_Override__c</fullName>
    <label>Quick Quote Weight</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>