unpackaged/main/default/objects/Quote__c/recordTypes/Logistics_Canada.recordType-meta.xml
<RecordType>
    <fullName>Logistics_Canada</fullName>
    <active>true</active>
    <description>Record Type for Canada</description>
    <label>Logistics Canada</label>
</RecordType>