unpackaged/main/default/objects/Quote__c/recordTypes/Logistics_Domestic.recordType-meta.xml
<RecordType>
    <fullName>Logistics_Domestic</fullName>
    <active>true</active>
    <description>Logistics Domestic Quotes</description>
    <label>Logistics Domestic</label>
</RecordType>