unpackaged/main/default/objects/Quote__c/validationRules/Quote_Closed_Lost_Requires_Lost_Comment.validationRule-meta.xml
<ValidationRule>
    <fullName>Quote_Closed_Lost_Requires_Lost_Comment</fullName>
    <active>true</active>
    <description>Quote in stage &quot;Closed Lost&quot; required a Lost Comment.</description>
    <errorConditionFormula>AND(ISPICKVAL(Stage__c,&#39;Closed Lost&#39;),($Profile.Name &lt;&gt; &quot;GES Administrator Interface&quot;), 
ISBLANK(Lost_Comment__c))</errorConditionFormula>
    <errorDisplayField>Lost_Comment__c</errorDisplayField>
    <errorMessage>Quote in stage &quot;Closed Lost&quot; required a Lost Comment.</errorMessage>
</ValidationRule>