unpackaged/main/default/objects/Quote__c/validationRules/Quote_Closed_Lost_Requires_Lost_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Quote_Closed_Lost_Requires_Lost_Reason</fullName>
    <active>true</active>
    <description>Quote in stage &quot;Closed Lost&quot; required a Lost Reason.</description>
    <errorConditionFormula>AND( ($Profile.Name &lt;&gt; &quot;GES Administrator Interface&quot;),IF(AND(ISPICKVAL(Stage__c,&#39;Closed Lost&#39;), 
ISPICKVAL(Lost_Reason__c,&#39;&#39;)),true,false))</errorConditionFormula>
    <errorDisplayField>Lost_Reason__c</errorDisplayField>
    <errorMessage>Quote in stage &quot;Closed Lost&quot; required a Lost Reason.</errorMessage>
</ValidationRule>